plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
 //    id 'com.gluonhq.client-gradle-plugin' version '0.1.42'
 //   id 'com.gluonhq.gluonfx-gradle-plugin' version '1.0.16'
}

group 'pro.javacard.nfc4pc'
version '230307'

repositories {
    mavenCentral()
    maven {
        url 'https://javacard.pro/maven/'
    }
}

compileJava {
    sourceCompatibility = '11'
    targetCompatibility = '11'
}

javafx {
    version = "19"
    modules = ['javafx.controls', 'javafx.graphics', 'javafx.swing']
    //configuration = 'compileOnly'
}
//gluonClient {
//    reflectionList = ["pro.javacard.nfc4pc.MainWrapper"]
//}


application {
    mainClass = "$moduleName/pro.javacard.nfc4pc.MainWrapper"
    mainModule = "pro.javacard.nfc4pc"
}

jar {
    manifest {
        attributes 'Main-Class': 'pro.javacard.nfc4pc.MainWrapper'
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}


dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'

    implementation 'com.github.martinpaljak:apdu4j-pcsc:22.09.07'
    implementation 'com.dustinredmond.fxtrayicon:FXTrayIcon:4.0.1'
    implementation 'org.slf4j:slf4j-simple:2.0.6'
    implementation 'net.sf.jopt-simple:jopt-simple:5.0.4'
    implementation 'com.payneteasy:ber-tlv:1.0-11'

    runtimeOnly "org.openjfx:javafx-graphics:$javafx.version:win"
    runtimeOnly "org.openjfx:javafx-graphics:$javafx.version:mac"
    runtimeOnly "org.openjfx:javafx-graphics:$javafx.version:linux"
    runtimeOnly "org.openjfx:javafx-graphics:$javafx.version:mac-aarch64"

}

test {
    useJUnitPlatform()
}